Image Texture: if open PSD file, color space option always switched back to sRGB #66571

Closed
opened 2019-07-08 19:46:19 +02:00 by Alexander · 8 comments

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 418.81

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-08 12:40, hash: 27adc4aa33
Worked: (optional)

Short description of error
If PSD image file used as input In "Image Texture" node, it became Impossible to change sRGB color space option to any other. (after selecting any other option, it will switch back to sRGB automatically)

Exact steps for others to reproduce the error

  1. Create new scene (General)
  2. Go to "Shading" workspace
  3. Add new "Image Texture" node
  4. Open PSD file as texture input of the "Image Texture" node
  5. Connect "Image Texture" node to material's "Base Color" input
  6. Try to change "Color Space" option in "Image Texture" node from sRGB to any other.
**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 418.81 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-08 12:40, hash: `27adc4aa33` Worked: (optional) **Short description of error** If PSD image file used as input In "Image Texture" node, it became Impossible to change sRGB color space option to any other. (after selecting any other option, it will switch back to sRGB automatically) **Exact steps for others to reproduce the error** 1) Create new scene (General) 2) Go to "Shading" workspace 3) Add new "Image Texture" node 4) Open PSD file as texture input of the "Image Texture" node 5) Connect "Image Texture" node to material's "Base Color" input 6) Try to change "Color Space" option in "Image Texture" node from sRGB to any other.
Author

Added subscriber: @CoastKid

Added subscriber: @CoastKid

Added subscriber: @dfelinto

Added subscriber: @dfelinto

Please attach a simple (small) PSD file here. Not many developers have a way of creating the faulty file.
Also can you test if the issue also happens in 2.79?

Please attach a simple (small) PSD file here. Not many developers have a way of creating the faulty file. Also can you test if the issue also happens in 2.79?
Sergey Sharybin was assigned by Dalai Felinto 2019-07-09 21:27:58 +02:00

Added subscriber: @Sergey

Added subscriber: @Sergey

Strangely confirmed with an old file I had around: grid-native.psd

@Sergey wants to try your hand at it? It seems colour-management related.

Strangely confirmed with an old file I had around: ![grid-native.psd](https://archive.blender.org/developer/F7579802/grid-native.psd) @Sergey wants to try your hand at it? It seems colour-management related.
Author

In #66571#716709, @dfelinto wrote:
Also can you test if the issue also happens in 2.79?

2.79 also have that problem.

> In #66571#716709, @dfelinto wrote: > Also can you test if the issue also happens in 2.79? 2.79 also have that problem.

This issue was referenced by e9d3e056d1

This issue was referenced by e9d3e056d1a61a552fa616d1bd5b41570ae7d765

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66571
No description provided.