Fix T66571: Unable to change input color space of PSD

Image reader must not override file's color space specification if it
is already specified.